--- a/assets/style.css
+++ b/assets/style.css
@@ -174,3 +174,13 @@ td {
 table {
     margin: 0 auto;
 }
+
+/* Customer
+landing page
+styling */
+
+/* Landing image */
+.landingImage {
+    width: 100%;
+    height: 40%;
+}
