Modification et ajout de vérification force du mot de passe en JS

--- a/assets/style.css
+++ b/assets/style.css
@@ -283,3 +283,9 @@ styling */
     object-fit: cover;
     border-radius: 5px;
   }
+/* Badge de test puissance du mot de passe */
+.displayBadge {
+    border-radius: 3px;
+    color: white;
+    width: 90%;
+}
