Ajout de fichier header.php et footer.php + include

--- a/assets/style.css
+++ b/assets/style.css
@@ -289,3 +289,7 @@ styling */
     color: white;
     width: 90%;
 }
+/* Création de changement dynamique de la navbar */
+a .active {
+    color: #E8D5A3 !important;
+}
