--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,3 +302,89 @@ styling */
     color: #E8D5A3 !important;
     text-decoration: underline;
 }
+/* Hotel side application navbar styling */
+.sandBackground {
+    background-color: #E8D5A3;
+}
+.hotelLink:hover {
+    color: #5256ad !important;
+}
+.hotelActive {
+    color: #5256ad !important;
+    text-decoration: underline;
+}
+.hotelTitle {
+    color: #E8D5A3;
+    font-size: 24px;
+}
+.hotelIntro {
+    font-size: 16px;
+    color: white;
+}
+.hotelBody {
+    background-image: url(../img/clouds_background.jpeg);
+    background-repeat: no-repeat;
+}
+.hotelSeparation {
+    height: 0px;
+    border: none;
+    border-top: 2px solid #E8D5A3;
+    width: 50%;
+    text-align: left;
+    margin-left: 0;
+    opacity: 1;
+}
+.hotelSub {
+    font-size: 22px;
+}
+.drop-zone {
+    max-width: 400px;
+    height: 400px;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    cursor: pointer;
+    color: white;
+    border: 4px dashed #E8D5A3;
+    border-radius: 10px;
+    margin: auto;
+  }
+  
+  .drop-zone--over {
+    border-style: solid;
+  }
+  
+  .drop-zone__input {
+    display: none;
+  }
+  
+  .drop-zone__thumb {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #cccccc;
+    background-size: cover;
+    position: relative;
+  }
+  
+  .drop-zone__thumb::after {
+    content: attr(data-label);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px 0;
+    color: #ffffff;
+    background: rgba(0, 0, 0, 0.75);
+    font-size: 14px;
+    text-align: center;
+  }
+.formLabel {
+    display: block;
+}
