--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,6 +470,11 @@ styling */
     color: white;
     width: 12em;
 }
+.deleteButton {
+    background-color: red;
+    color: white;
+    width: 18em;
+}
 .showExampleButton {
     width: 12em;
     border: none;
@@ -483,4 +488,12 @@ styling */
 }
 .hiddenInput {
     display: none;
+}
+.deleteCategoryButton {
+    width: 12em;
+    border: none;
+    background-color: red;
+    color: white;
+    border-radius: 3px;
+    height: 3em;
 }
