--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,3 +497,28 @@ styling */
     border-radius: 3px;
     height: 3em;
 }
+.saveButton {
+    width: 12em;
+    border: none;
+    background-color: green;
+    color: white;
+    border-radius: 3px;
+    height: 3em;
+}
+/* Specific Hotel side reservation page perks */
+.reservationTable {
+    background-color: white;
+}
+.reservationTable td {
+    padding: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.downloadButton {
+    height: 3em;
+    width: 14em;
+    border: none;
+    background-color: #5256ad;
+    color: white;
+    border-radius: 3px;
+}
