--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ confirmed styling */
 }
 .laptopImage {
     width: 80%;
-    height: 40%;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -235,62 +235,6 @@ confirmed styling */
 /* subscriptionFinalisation 
 styling */
 
-/* Drag & Drop styling */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
-.drag-area{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #4E629C;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    border: 2px dashed #fff;
-    height: 150px;
-    width: 230px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .drag-area.active{
-    border: 2px solid #fff;
-  }
-  .drag-area .icon{
-    font-size: 20px;
-    color: #fff;
-  }
-  .drag-area header{
-    font-size: 10px;
-    font-weight: 100;
-    color: #fff;
-  }
-  .drag-area span{
-    font-size: 15px;
-    font-weight: 100;
-    color: #fff;
-    margin: 10px 0 15px 0;
-  }
-  .drag-area button{
-    padding: 4px 10px;
-    font-size: 14px;
-    font-weight: 100;
-    border: none;
-    outline: none;
-    background: #fff;
-    color: #5256ad;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .drag-area img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-  }
 /* Badge de test puissance du mot de passe */
 .displayBadge {
     border-radius: 3px;
