--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,6 +469,11 @@ styling */
     border-radius: 3px;
     height: 3em;
 }
+
+.previewImage {
+    width: 100%;
+    height: auto;
+}
 /* Specific Hotel side reservation page perks */
 .reservationTable {
     background-color: white;
