Création de la page de modification de service. Reste à copmpléter la structure html et construire le n,ouveau controller.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,6 +499,12 @@ styling */
     left: -5%;
 }
 
+/* Services modification page */
+
+.bold {
+    font-weight: bold;
+}
+
 /* Specific Hotel side reservation page perks */
 .reservationTable {
     background-color: white;
