--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -4,7 +4,7 @@
     background-size: cover;
 }
 
-footer {
+.absoluteFooter {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -18,4 +18,12 @@ footer {
 .accountCreationLink:hover {
     color: white;
     text-decoration: underline;
+}
+
+.customerFormCol input {
+    width: 90%;
+}
+
+.errorMessage {
+    text-align : center;
 }
