--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -27,3 +27,205 @@
 .errorMessage {
     text-align : center;
 }
+
+.customerPhoto {
+    width: 50%;
+    height: auto;
+}
+
+.infosCol {
+    background-color: #4E629C;
+    border-radius: 10%;
+    color: white;
+    margin: 3em 0;
+}
+
+#slider {
+    position: relative;
+    width: 50%;
+    height: 32vw;
+    margin: 150px auto;
+    font-family: 'Helvetica Neue', sans-serif;
+    perspective: 1400px;
+    transform-style: preserve-3d;
+}
+
+@media only screen and (max-width: 768px){
+  #slider {
+    width: 60%;
+    height: 40vw;
+  }
+}
+  
+input[type=radio] {
+   position: relative;
+  top: 108%;
+  left: 50%;
+  width: 18px;
+  height: 18px;
+  margin: 0 15px 0 0;
+  opacity: 0.4;
+  transform: translateX(-83px);
+  cursor: pointer;
+}
+
+
+input[type=radio]:nth-child(5) {
+  margin-right: 0px;
+}
+
+input[type=radio]:checked {
+  opacity: 1;
+}
+
+#slider label,
+#slider label img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  color: white;
+  font-size: 70px;
+  font-weight: bold;
+  border-radius: 3px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 400ms ease;
+}
+
+#s1:checked ~ #slide1,
+ #s2:checked ~ #slide2,
+  #s3:checked ~ #slide3,
+   #s4:checked ~ #slide4,
+    #s5:checked ~ #slide5 {
+  box-shadow: 0 13px 26px rgba(0,0,0, 0.3), 0 12px 6px rgba(0,0,0, 0.2);
+  transform: translate3d(0%, 0, 0px);
+}
+
+#s1:checked ~ #slide2,
+ #s2:checked ~ #slide3,
+  #s3:checked ~ #slide4,
+   #s4:checked ~ #slide5,
+    #s5:checked ~ #slide1 {
+  box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
+  transform: translate3d(20%, 0, -100px);
+}
+
+#s1:checked ~ #slide3,
+ #s2:checked ~ #slide4,
+  #s3:checked ~ #slide5,
+   #s4:checked ~ #slide1,
+    #s5:checked ~ #slide2 {
+  box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
+  transform: translate3d(40%, 0, -250px);
+}
+
+#s1:checked ~ #slide5,
+ #s2:checked ~ #slide1,
+  #s3:checked ~ #slide2,
+   #s4:checked ~ #slide3,
+    #s5:checked ~ #slide4 {
+  box-shadow: 0 6px 10px rgba(0,0,0, 0.3), 0 2px 2px rgba(0,0,0, 0.2);
+  transform: translate3d(-20%, 0, -100px);
+}
+
+#s1:checked ~ #slide4,
+ #s2:checked ~ #slide5,
+  #s3:checked ~ #slide1,
+   #s4:checked ~ #slide2,
+    #s5:checked ~ #slide3 {
+  box-shadow: 0 1px 4px rgba(0,0,0, 0.4);
+  transform: translate3d(-40%, 0, -250px);
+} 
+
+.serviceName {
+  position: absolute;
+  font-size: 25%;
+  text-align: center;
+  z-index: 4;
+  padding: 0 5px;
+  left: 5%;
+  top: 5%;
+  width: fit-content;
+  height: fit-content;
+  background: rgba(255, 255, 255, 0.3);
+  color: black;
+}
+
+@media only screen and (max-width: 768px){
+  .serviceName{
+    font-size: 3vw;
+  }
+}
+
+.serviceName:after {
+  content: '';
+  width: 20px;
+  height: 4px;
+  background: #4E629C;
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  transition: 0.6s;
+}
+
+.serviceName:hover:after {
+  width: 100%;
+}
+
+.serviceFrameButton {
+  position: absolute;
+  z-index: 4;
+  right: 5%;
+  bottom: 5%;
+  height: fit-content;
+  width: 20%;
+  color: white;
+  font-size: 25%;
+  background: #4E629C;
+}
+
+@media only screen and (max-width: 768px){
+  .serviceFrameButton{
+    font-size: 4vw;
+    width: fit-content;
+  }
+}
+
+.mainService {
+  border: 1px solid black;
+  border-radius: 10%;
+  height: 150vh;
+}
+
+.serviceTitle {
+  text-align: center;
+  font-size: 7vh;
+  margin: 1em 0;
+}
+
+.showSS {
+  background-color: #4E629C;
+  color: white;
+  border-radius: 5%;
+  height: 14em;
+}
+
+.seprationSS {
+  border: 1px solid black;
+}
+
+.serviceImage {
+  width: 50%;
+  text-align: center;
+  height: auto;
+  border-radius: 10%;
+  border-left: 2px solid #4E629C;
+  border-right: 2px solid #4E629C;
+}
+
+
+  
