--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -198,7 +198,7 @@ input[type=radio]:checked {
 .mainService {
   border: 1px solid black;
   border-radius: 10%;
-  height: 150vh;
+  height: fit-content;
 }
 
 .serviceTitle {
