--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,6 +475,7 @@ styling */
 .showService {
     background: white;
     border-radius: 10%;
+    height: 20em;
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -482,7 +483,7 @@ styling */
 .emptyService {
     border-radius: 10%;
     border: 3px #E8D5A3 dashed;
-    height: 100%;
+    height: 20em;
     display: flex;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
