--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -227,5 +227,36 @@ input[type=radio]:checked {
   border-right: 2px solid #4E629C;
 }
 
+.customerFormCol input{
+  width: 80%;
+}
 
+.customerFormCol label{
+  margin-top: 1.5em;
+}
+
+.passwordIcon {
+  position: relative;
+}
+
+#showPassword{
+  position: absolute;
+  right: 13%;
+  top: 22%;
+  color: #4E629C;
+}
+.displayBadge{
+  margin: 0 auto;
+}
+
+.customerAccounTitle {
+  text-align: center;
+  color: #4E629C;
+  margin: 1em;
+}
+
+.customerAccountButton{
+  background-color: #4E629C;
+  margin: 1em 0;
+}
   
