--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,8 @@ styling */
 
 .previewImage {
     width: 100%;
-    height: auto;
+    height: 50%;
+    border-radius: 10%;
 }
 
 .showService {
