Créationd e deux nouveaux controlleur spôur la page mon compte, reste à créer le code des différents controller associés

--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -436,3 +436,13 @@ select:hover {
   border-radius: 10%;
   padding: 20px;
 }
+
+/* customer account page */
+
+.customerDetailsRow .shadow {
+  border: 1pc solid #4E629C;
+  margin: 2em 0;
+  padding: 10px;
+  border-radius: 10%;
+
+}
