Création du script AJAX permettant de modifier l'email et le numéro de téléphone du compte, ajout de possibilité de déconnexion et de suppression du compte.

--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -444,5 +444,11 @@ select:hover {
   margin: 2em 0;
   padding: 10px;
   border-radius: 10%;
+  position: relative;
+}
 
+.accountModifyButton {
+  position: absolute;
+  top: -18%;
+  right: -5%;
 }
