--- a/assets/css/clientSide.css
+++ b/assets/css/clientSide.css
@@ -430,7 +430,7 @@ select:hover {
 
 .reservationConfirmed {
   margin: 2em 0;
-  font-size: 50px;
+  font-size: 40px;
   background-color: #4E629C;
   color: white;
   border-radius: 10%;
@@ -451,4 +451,10 @@ select:hover {
   position: absolute;
   top: -18%;
   right: -5%;
+}
+
+.proButton {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
