Ajout de la possibilité de vérifier les réservations dans l'onglet statistiques de la partie mon compte, début de création d'un système de recherche

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,3 +724,13 @@ styling */
     background-color: red;
 }
 
+.bookingInformationCol {
+    background-color: white;
+    border-radius: 10%;
+    border: 1px solid black;
+}
+
+.coloredHeader {
+    height: 20%;
+    background-color: #E8D5A3;
+}
