--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -731,6 +731,11 @@ styling */
 }
 
 .coloredHeader {
-    height: 20%;
+    height: fit-content;
+    text-align: center;
     background-color: #E8D5A3;
+    width: fit-content;
+    padding: 0.5em;
+    border-radius: 10%;
+    margin : 1em 0;
 }
